<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 XperiaLabs Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name" translatable="true">Xperia Audio</string>

    <!-- Audio Settings -->
    <string name="audio_menu_title">Audio Settings</string>
    <string name="audio_menu_header">Sound Quality</string>
    <string name="audio_setting_summary">Elevate your sound quality with the Dolby Sound EQ for a remarkable and immersive audio playback experience</string>

    <string name="dsee_title">DSEE Ultimate</string>
    <string name="dsee_summary">Upscale your compressed music accurately using AI technology</string>
    <string name="windnr_title">Intelligent Wind Filter</string>
    <string name="windnr_summary">Removes noises from wind hitting the microphone when recording.\nUsing sound separation technology, you can remove noise without loss of quality (Only available when recording with the internal microphone)</string>

    <string name="dolby_title">Dolby Sound</string>
    <string name="dolby_summary">Adjust Dolby Sound settings to experience immersive, multidimensional sound that envelops you, bringing movies, music, and games to life</string>

    <string name="dtsx_title">DTS:X Ultra</string>
    <string name="dtsx_summary">DTS:X Ultra improves audio quality with three-dimensional spatial effects and a user-adjustable equalizer, allowing for a more engaging entertainment environment</string>

    <string name="threesixtyupmix_title">360 Upmix</string>
    <string name="threesixtyupmix_summary">With Sony\'s 360 Reality Audio Upmix (360 Upmix) technology, you can enjoy spatial and immersive sound with regular stereo sources</string>

    <string name="effectpriority_title">Effect Priority</string>
    <string name="effectpriority_summary">The 360 Upmix app will always take priority over the other effects you\'ve turned on (either any of the other settings on this screen with 360 Upmix or just 360 Upmix by itself) for the media sound of apps.</string>

    <string name="audio_menu_footer">While playing audio content with sound enhnacements, the content\'s information will take precedence over the settings on this screen. High resolution content can also be play properly when sound enhnacements are turned off.\n\n\n\nAbout Spatial Audio\nTo enable the 360 Reality Audio feature, turn on Spatial Sound.\nAll settings on this screen support Spatial Audio.</string>
</resources>
